ingress /ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local     # change this to your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service    # change to your service name
            port:
              number: 80
